--- a/PortfolioBackend/wwwroot/components/header.html
+++ b/PortfolioBackend/wwwroot/components/header.html
@@ -1,13 +1,13 @@
 <nav class="navbar">
     <div class="nav-container">
         <div class="nav-left">
-            <a href="Home.html" class="nav-logo">
+            <a href="index.html" class="nav-logo">
                 <img src="/components/logo.png" alt="Codenex Solutions" class="nav-logo-img">
                 <span class="nav-logo-text">Codenex Solutions</span>
             </a>
             <div class="nav-center">
                 <ul class="nav-links">
-                    <li><a href="Home.html"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="About.html"><i class="fas fa-user-circle"></i> About</a></li>
                     <li><a href="Publications.html"><i class="fas fa-file-alt"></i> Publications</a></li>
                     <li><a href="Products.html"><i class="fas fa-cube"></i> Products</a></li>
