--- a/PortfolioBackend/wwwroot/components/footer.html
+++ b/PortfolioBackend/wwwroot/components/footer.html
@@ -21,7 +21,7 @@
         <div class="footer-section">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="Home.html"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="About.html"><i class="fas fa-info-circle"></i> About</a></li>
                 <li><a href="Publications.html"><i class="fas fa-book"></i> Publications</a></li>
                 <li><a href="Products.html"><i class="fas fa-cube"></i> Products</a></li>
