--- a/PortfolioBackend/wwwroot/components/footer.html
+++ b/PortfolioBackend/wwwroot/components/footer.html
@@ -26,7 +26,7 @@
                 <li><a href="Publications.html"><i class="fas fa-book"></i> Publications</a></li>
                 <li><a href="Products.html"><i class="fas fa-cube"></i> Products</a></li>
 		<li><a href="Repository.html"><i class="fas fa-cube"></i> Repository</a></li>
-		<li><a href="Solutions.html"><i class="fas fa-cube"></i> Solutions</a></li>
+		<li><a href="solutions.html"><i class="fas fa-cube"></i> Solutions</a></li>
                 <li><a href="Contact.html"><i class="fas fa-phone"></i> Contact</a></li>
             </ul>
         </div>
