--- a/PortfolioBackend/wwwroot/components/header.html
+++ b/PortfolioBackend/wwwroot/components/header.html
@@ -12,7 +12,7 @@
                     <li><a href="Publications.html"><i class="fas fa-file-alt"></i> Publications</a></li>
                     <li><a href="Products.html"><i class="fas fa-cube"></i> Products</a></li>
                     <li><a href="Repository.html"><i class="fab fa-github"></i> Repository</a></li>
-                    <li><a href="Solutions.html"><i class="fas fa-lightbulb"></i> Solutions</a></li>
+                    <li><a href="solutions.html"><i class="fas fa-lightbulb"></i> Solutions</a></li>
                     <li><a href="Contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
                 </ul>
             </div>
