--- a/wwwroot/components/footer.html
+++ b/wwwroot/components/footer.html
@@ -21,23 +21,23 @@
         <div class="footer-section">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="About.html"><i class="fas fa-info-circle"></i> About</a></li>
-                <li><a href="Publications.html"><i class="fas fa-book"></i> Publications</a></li>
-                <li><a href="Products.html"><i class="fas fa-cube"></i> Products</a></li>
-		<li><a href="Repository.html"><i class="fas fa-cube"></i> Repository</a></li>
-		<li><a href="solutions.html"><i class="fas fa-cube"></i> Solutions</a></li>
-                <li><a href="Contact.html"><i class="fas fa-phone"></i> Contact</a></li>
+                <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="/About"><i class="fas fa-info-circle"></i> About</a></li>
+                <li><a href="/Publications"><i class="fas fa-book"></i> Publications</a></li>
+                <li><a href="/Products"><i class="fas fa-cube"></i> Products</a></li>
+		<li><a href="/Repository"><i class="fas fa-cube"></i> Repository</a></li>
+		<li><a href="/solutions"><i class="fas fa-cube"></i> Solutions</a></li>
+                <li><a href="/Contact"><i class="fas fa-phone"></i> Contact</a></li>
             </ul>
         </div>
         <div class="footer-section">
             <h3>Our Services</h3>
             <ul>
-                <li><a href="About.html"><i class="fas fa-cloud"></i> Cloud Migration</a></li>
-                <li><a href="About.html"><i class="fas fa-shield-alt"></i> Cybersecurity</a></li>
-                <li><a href="About.html"><i class="fas fa-chart-line"></i> Data Analytics</a></li>
-                <li><a href="About.html"><i class="fas fa-brain"></i> AI Solutions</a></li>
-                <li><a href="About.html"><i class="fas fa-cogs"></i> DevOps</a></li>
+                <li><a href="/About"><i class="fas fa-cloud"></i> Cloud Migration</a></li>
+                <li><a href="/About"><i class="fas fa-shield-alt"></i> Cybersecurity</a></li>
+                <li><a href="/About"><i class="fas fa-chart-line"></i> Data Analytics</a></li>
+                <li><a href="/About"><i class="fas fa-brain"></i> AI Solutions</a></li>
+                <li><a href="/About"><i class="fas fa-cogs"></i> DevOps</a></li>
             </ul>
         </div>
         <div class="footer-section">
